@@ -25,6 +25,13 @@
 #include "ugens1.h"
 #include <math.h>
 
+#ifdef MSVC /* VL MSVC fix */
+#      define  u_char  unsigned char
+#      define  u_short unsigned short
+#      define  u_int   unsigned int
+#      define  u_long  unsigned long
+#endif
+
 #define FHUND (FL(100.0))
 
 int linset(LINE *p)
